--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,9 @@
         <div class="row">
 
           <div class="adress_copyright col-md-4">
-            <div><span>Global Headquarters:</span></div>
+            <div>
+              <span>Global Headquarters:</span>
+            </div>
             <div style="color: #EDEDED">
               <div>
                 SixSq.
@@ -29,8 +31,10 @@
                 <br>Switzerland
               </div>
             </div>
-            <br>
-            <div><span>North American Headquarters:</span></div>
+            <br/>
+            <div>
+              <span>North American Headquarters:</span>
+            </div>
             <div style="color: #EDEDED">
               <div>
                 SixSq.
@@ -39,14 +43,18 @@
                 <br>Canada
               </div>
             </div>
-            <br>
+            <br/>
           </div>
 
           <div class="contact_us col-md-4">
-            <div>Need information? Give feedback?<br>Get in touch.</div>
+            <div>Need information? Give feedback?<br/>Get in touch.</div>
             <div><a href="#" onclick="$('#contact-us-dialog').dialog('open');return false;">Fill form</a></div>
             <div>info: +41 77 44 68 170<br>support: +41 22 57 52 229</div>
-            <div><a href="mailto:info@sixsq.com">info@sixsq.com</a><br><a href="mailto:support@sixsq.com">support@sixsq.com</a></div>
+            <div>
+              <a href="mailto:info@sixsq.com">info@sixsq.com</a>
+              <br/>
+              <a href="mailto:support@sixsq.com">support@sixsq.com</a>
+            </div>
           </div>
 
           <div class="follow_us col-md-4">
@@ -62,9 +70,10 @@
             </a>
             <div class="copyright">Copyright © 2014 SixSq Sàrl. All rights reserved.</div>
             <div class="copyright">SixSq, SlipStream and NuvlaBox are trademarks of SixSq Sàrl in Switzerland and other countries.</div>
+          </div>
         </div>
       </div>
-  </footer>
+    </footer>
 
 
   <!-- Bootstrap core JavaScript
@@ -76,5 +85,6 @@
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   <script src="/js/sixsq.js"></script>
-    
+  <script src="/js/jquery.tipsy.js"></script>
+
   <script type="text/javascript">$("#nav-{{ page.class }}, #sub_{{ page.sub }}").addClass("active");</script>
