--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" id="nuvlabox-main-story">
+<div class="jumbotron nuvlabox-main-story">
   <div class="container">
     <h1>NuvlaBox</h1>
     <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
