--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -20,59 +20,61 @@
   {% include nuvlabox_nav.html %}
   {% include nuvlabox_intro.html %}
 
-        <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Private</h2>
-            <p>
-              A private cloud solution ideal for SME/SMB, NGO and small campuses.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <h2>
-                Compact
-            </h2>
-            <p>
-                Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <h2>
-                Simple
-            </h2>
-            <p>
-                Smart factory settings and zero config means it's a child's play to setup and use. 
-            </p>
-          </div>
-          <div class="col-md-4">
-            <h2>
-                Connected
-            </h2>
-            <p>
-                Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <h2>
-                Secure
-            </h2>
-            <p>
-                All communication encrypted and deployments automated for higher security.
-            </p>
-          </div>
-          <div class="col-md-4">
-            <h2>
-                Scalable
-            </h2>
-            <p>
-                Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
-            </p>
+        <div class="container spacy">
+          <h1>In a nutshell</h1>
+          <div class="row">
+            <div class="col-md-4">
+              <h2>Private</h2>
+              <p>
+                A private cloud solution ideal for SME/SMB, NGO and small campuses.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                  Compact
+              </h2>
+              <p>
+                  Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                  Simple
+              </h2>
+              <p>
+                  Smart factory settings and zero config means it's a child's play to setup and use. 
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                  Connected
+              </h2>
+              <p>
+                  Includes built-in WiFi and dual Ethernet connections. Can also be remote controlled.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                  Secure
+              </h2>
+              <p>
+                  All communication encrypted and deployments automated for higher security.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <h2>
+                  Scalable
+              </h2>
+              <p>
+                  Can scale out to remote or public clouds, giving you the simplest ever complete hybrid cloud solution.
+              </p>
+            </div>
           </div>
         </div>
       </div>
 
       <div style="background-color: #eee">
-        <div class="container">
+        <div class="container spacy">
           <h1 id="who-is-the-nuvlabox-for">Who is the NuvlaBox for?</h1>
           <div class="row">
             <div class="col-md-6">
@@ -95,37 +97,7 @@
         </div>
       </div>
 
-        <div class="container usecases">
-          <h1>NuvlaBox Use Cases</h1>
-          <div class="row">
-            <div class="col-md-4">
-              <h2>
-                Schools or Federation of Schools
-              </h2>
-              <p>Directors of schools, like most leaders of non-IT organisations, understandably want to focus on their primary mission, which is to educate children. For them, IT...
-              </p>
-              <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>
-                Putting Intelligence at the Edge of the Network
-              </h2>
-              <p>Network and internet service providers constantly have the issue of better control and handover at the edge of their network. For example, ensuring that the...
-              </p>
-              <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>
-                Field Operations with Agile Local Infrastructure
-              </h2>
-              <p>Users operating in the field, such as journalists (e.g. sports events, international conferences, emergency coverage) and aid workers (e.g. relief efforts, aid camps) require a...
-              </p>
-              <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
-            </div>
-          </div>
-          <p><a href="/products/nuvlabox-usecases.html" class="btn btn-primary btn-lg" role="button">Read more Use Cases &raquo;</a></p>
-        </div>
-      </div>
+      {% include overview_usecases.html %}
 
       {% include whats-next-and-order.html %}
       {% include footer.html %}
