--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container spacy">
   <h1>Our customers</h1>
   <p>Our customers are large and small system integrators, high-tech companies, institutions and agencies. We value transparent relationships, built on trust and honesty. This approach is valued by our customers and partners, giving us an edge over competition.</p>
   <ul id="bxslider" data-call="bxslider" data-options="slideMargin:0, auto:true, autoReload:true" data-breaks="[{screen:0, slides:3, pager:false, controls: false}, {screen:460, slides:5}, {screen: 768, slides:8, pager:false}]">
