--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <!-- Bootstrap core CSS -->
   <link href="/externals/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <link href="/externals/bxslider/jquery.bxslider.css" rel="stylesheet" />
+  <link href="/css/tipsy.css" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
   <link href="/css/jumbotron.css" rel="stylesheet" />
