--- a/_includes/top.html
+++ b/_includes/top.html
@@ -8,23 +8,23 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="/img/design/logo_clean.png" style="width: 48px;">
+        <img src="/img/design/logo_clean.png" style="width: 64px;">
       </a>
     </div>
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li id="nav-slipstream"><a href="/products/slipstream.html">SlipStream</a><span></span></li>
         <li id="nav-nuvlabox"><a href="/products/nuvlabox.html">NuvlaBox</a><span></span></li>
-        <li id="nav-products"><a href="/products/index.html">Products</a><span></span></li>
+        <!-- <li id="nav-products"><a href="/products/index.html">Products</a><span></span></li> -->
         <li id="nav-customers"><a href="/customers/index.html">Customers</a><span></span></li>
         <li id="nav-about"><a href="/about-us.html">About Us</a><span></span></li>
         <li id="nav-contact"><a href="/contact.html">Contact</a><span></span></li>
         <li id="nav-media" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Media <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">News</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Videos</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/videos">Videos</a></li>
           </ul>
           <span></span>
         </li>
