--- a/_includes/whats-next-and-order.html
+++ b/_includes/whats-next-and-order.html
@@ -1,11 +1,13 @@
-<div style="background-color: #eee;">
-  <div class="container">
+<div style="color: white; background-color: #9B9B9B;">
+  <div class="container spacy">
     <h1>What's next?</h1>
     <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch or simply order here.
     </p>
+    <center>
     <p><a href="#" class="btn btn-primary btn-lg" role="button">Contact us &raquo;</a></p>
     <p><a href="#" class="btn btn-primary btn-lg" role="button">Order now &raquo;</a></p>
+    </center>
 <!--          <span class='contact-us-placeholder'></span>
   <p/>
   <span class='order-now-placeholder'></span>
