--- a/_layouts/article_nuvlabox_usecases.html
+++ b/_layouts/article_nuvlabox_usecases.html
@@ -21,14 +21,9 @@
 
   {% include nuvlabox_nav.html %}
 
-  <div class="jumbotron" id="nuvlabox-main-story">
-    <div class="container">
-      <h1>NuvlaBox</h1>
-      <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
-    </div>
-  </div>
+  {% include nuvlabox_intro.html %}
 
-  <div class="container">
+  <div class="container spacy">
     <h1>Use Cases</h1>
 
     <div class="row">
@@ -48,17 +43,19 @@
 
   {% for post in site.posts %}
     {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
-    <div class="container">
-      <h1 id="{{ post.title | replace:' ','-' }}">
-        {{ post.title }}
-      </h1>
-      <h2>User profile</h2>
-      <div>
-        {{ post.user_profile }}
-      </div>
-      <h2>Overview</h2>
-      <div>
-        {{ post.content }}
+    <div class="{% cycle 'odd', 'even' %}">
+      <div class="container spacy">
+        <h1 id="{{ post.title | replace:' ','-' }}">
+          {{ post.title }}
+        </h1>
+        <h2>User profile</h2>
+        <div>
+          {{ post.user_profile }}
+        </div>
+        <h2>Overview</h2>
+        <div>
+          {{ post.content }}
+        </div>
       </div>
     </div>
     {% endif %}
