--- a/_layouts/article_slipstream_usecases.html
+++ b/_layouts/article_slipstream_usecases.html
@@ -17,81 +17,53 @@
 
   {% include head.html %}
   
-  <body class="not_front_page">
-    <div id="wrapper">
+  {% include top.html %}
 
-      <div id="header">
-        {% include top.html %}
+  {% include slipstream_nav.html %}
+
+  {% include slipstream_intro.html %}
+
+  <div class="container spacy">
+    <h1>Use Cases</h1>
+
+    <div class="row">
+    {% for post in site.posts %}
+      {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
+      <div class="col-md-4">
+        <h2>{{ post.title }}</h2>
+        <p>
+          {{ post.content | markdownify | truncatewords: 16 }}
+        </p>
+        <a class="btn btn-default" href="#{{ post.title | replace:' ','-' }}" role="button">Use case details &raquo;</a>
       </div>
+      {% endif %}
+    {% endfor %}
+    </div>
+  </div>
 
-      <div id="content">
-        <div class="content_bg">
-          <div class="main">
-              <nav>
-                  <h1 class="list_title">{{ page.title }}</h1>
-                  <ul>
-                      <li id="sub_overview"><a href="/products/slipstream.html">Overview</a></li>
-                      <li id="sub_usecases"><a href="/products/slipstream-usecases.html">Use Cases</a></li>
-                      <li id="sub_features"><a href="/products/slipstream-features.html">Features</a></li>
-                      <li id="sub_techspecs"><a href="/products/slipstream-tech.html">Tech Specs</a></li>
-                      <li id="sub_tryme"><a href="/products/slipstream-tryme.html">Try Me</a></li>
-                      <li id="sub_pricing"><a href="/products/slipstream-pricing.html">Pricing</a></li>
-                  </ul>
-              </nav>
-              <div class="article">
-                <h1>Use Cases</h1>
-
-                <div class="list_usecases clearfix">                
-                    {% for post in site.posts %}
-                    {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
-                    <div>
-                        <a href="#{{ post.title | replace:' ','-' }}">
-                            <h3>
-                                {{ post.title }}
-                            </h3>
-                            <section>
-                                {{ post.content | markdownify | truncatewords: 16 }}
-                            </section>
-                        </a>
-                    </div>
-                    {% endif %}
-                    {% endfor %}
-                </div>
-            
-            {% for post in site.posts %}
-            {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
-                <h1 id="{{ post.title | replace:' ','-' }}">
-                  {{ post.title }}
-                </h1>
-                {% if post.warning %}
-                <p/>
-                <strong>Warning: </strong>{{ post.warning }}
-                {% endif %}
-                {% if post.note %}
-                <p/>
-                <strong>Please note: </strong>{{ post.note }}
-                {% endif %}
-                <h2>User profile</h2>
-                <div>
-                  {{ post.user_profile }}
-                </div>
-                <h2>Overview</h2>
-                <div>
-                  {{ post.content }}
-                </div>
-            {% endif %}
-            {% endfor %}
-              </div>
-
-        {% include whats-next.html %}
-
-          </div>
+  {% for post in site.posts %}
+    {% if post.category == page.category and post.class == page.class and post.layout == 'article' %}
+    <div class="{% cycle 'odd', 'even' %}">
+      <div class="container spacy">
+        <h1 id="{{ post.title | replace:' ','-' }}">
+          {{ post.title }}
+        </h1>
+        <h2>User profile</h2>
+        <div>
+          {{ post.user_profile }}
+        </div>
+        <h2>Overview</h2>
+        <div>
+          {{ post.content }}
         </div>
       </div>
-
-      {% include footer.html %}
-
     </div>
+    {% endif %}
+  {% endfor %}
+
+  {% include whats-next-and-order.html %}
+
+  {% include footer.html %}
 
     <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
 
