--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,70 +1,43 @@
 <!DOCTYPE html>
+<html>
+   {% include head.html %}
+  <body>
+   {% include top.html %}
 
-<html 
-   xmlns="http://www.w3.org/1999/xhtml" 
-   xml:lang="en" 
-   version="XHTML+RDFa 1.0" 
-   dir="ltr"
-   xmlns:content="http://purl.org/rss/1.0/modules/content/"
-   xmlns:dc="http://purl.org/dc/terms/"
-   xmlns:foaf="http://xmlns.com/foaf/0.1/"
-   xmlns:og="http://ogp.me/ns#"
-   xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
-   xmlns:sioc="http://rdfs.org/sioc/ns#"
-   xmlns:sioct="http://rdfs.org/sioc/types#"
-   xmlns:skos="http://www.w3.org/2004/02/skos/core#"
-   xmlns:xsd="http://www.w3.org/2001/XMLSchema#">
-
-  {% include head.html %}
-  
-  <body class="not_front_page">
-    <div id="wrapper">
-
-      <div id="header">
-        {% include top.html %}
-      </div>
-
-      <div id="content">
-        <div class="content_bg">
-
-          <div class="main">
-            <h1 class="list_title">{{ page.title }}</h1>
-            
-            <div class="list_news">
-              <ul>
-                
-                {% for post in site.posts %}
-                {% if post.category == page.category %}
-                <li>
-	          <img src="{{ post.image }}" />
-                  <a href="{{ post.url }}" class="title">{{ post.title }}</a>
-                  <div class="teaser">
-                    {{ post.content | strip_html | truncatewords: 25 }}
-                  </div>
-                  {% if post.category == news %}
-                  <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
-                  {% endif %}
-                  {% if post.author %}
-                  <div class="author">{{ post.author }}</div>
-                  {% endif %}
-                </li>
-                {% endif %}
-                {% endfor %}
-                
-              </ul>
-            </div>
-          </div>
-          
-          {% include side-products.html %}
-
-        </div>
-      </div>
-
-      {% include footer.html %}
-
+  <div class="jumbotron nuvlabox-main-story">
+    <div class="container">
+      <h1>{{ page.title }}</h1>
     </div>
+  </div>
+  {% for post in site.posts %}
+    {% if post.category == page.category %}
+    <div class="{% cycle 'even', 'odd' %} spacy">
+      <div class="container">
+        <center>
+        <a href="{{ post.url }}">
+          <img src="{{ post.image }}" />
+        </a>
+        <p/>
+        </center>
+        <h2>
+          <a href="{{ post.url }}" class="title">{{ post.title }}</a>
+        </h2>
+        {{ post.content | strip_html | truncatewords: 25 }}
+        {% if post.category == news %}
+          <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
+        {% endif %}
+        {% if post.author %}
+          <p/>
+          <div class="author">By: {{ post.author }}</div>
+        {% endif %}
+      </div>
+    </div>
+    {% endif %}
+  {% endfor %}
 
-    <script type="text/javascript">$("#menu_{{ page.category }} > a").addClass("current");</script>
+  {% include footer.html %}
+
+    <!-- <script type="text/javascript">$("#nav-media").addClass("active");</script> -->
 
   </body>
 </html>
