--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -87,4 +87,4 @@
   <script src="/js/sixsq.js"></script>
   <script src="/js/jquery.tipsy.js"></script>
 
-  <script type="text/javascript">$("#nav-{{ page.class }}, #sub_{{ page.sub }}").addClass("active");</script>
+  <script type="text/javascript">$("#nav-{{ page.class }}, #sub_{{ page.sub }}, #sub_{{ page.category }}").addClass("active");</script>
