--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,6 +3,7 @@
   {% include head.html %}
   <body>
     {% include top.html %}
+    {% include media_nav.html %}
 
     <div class="jumbotron">
       <div class="container">
