--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -18,7 +18,14 @@
   {% include head.html %}
   {% include top.html %}
   {% include slipstream_nav.html %}
-  {% include slipstream_intro.html %}
+
+      <div class="jumbotron">
+        <div class="container">
+          <h1>SlipStream</h1>
+          <p>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on open source software.</p>
+          <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
+        </div>
+      </div>
 
       <div class="container spacy">
         <h1>In a nutshell</h1>
