--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -21,14 +21,15 @@
 
         {% include top.html %}
 
-<div id="banner"><div>Partners Wanted</div></div>
+          <div id="banner"><div>Partners Wanted</div></div>
 
             <!-- Main jumbotron for a primary marketing message or call to action -->
-          <div class="jumbotron ss-placeholder-page main-story">
+          <div class="jumbotron main-story">
 
               <div class="container">
                 <h1>Hybrid Cloud Application Deployment</h1>
                 <h2>1-click application deployment automation, based on professional open source.</h2>
+                <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
                 <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
               </div>
 
@@ -51,10 +52,12 @@
 
           </div> <!-- /jumbotron -->
 
-          <div class="nuvlabox-main-story spacy">
+          <div id="banner"><div>Partners Wanted</div></div>
+          <div class="jumbotron main-story" style="background-color: #E2EFF7">
             <div class="container">
-              <h1>Bridging the digital divid</h1>
-              <h2>A cloud appliance designed for SMEs, SMBs, NGOs and the emerging world.</h2>
+              <h1>Bridging the digital divide</h1>
+              <h2>...with a cloud-in-a-box that's child play to use and manage.</h2>
+              <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
               <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
             </div>
 
