--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -1,7 +1,6 @@
-<div class="jumbotron">
+<div class="jumbotron slipstream-main-story">
   <div class="container">
     <h1>SlipStream</h1>
     <p>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on open source software.</p>
-    <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStream overview" width="700" style="padding: 35px 0 15px 0;"/></p>
   </div>
 </div>
