--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -3,6 +3,7 @@
    {% include head.html %}
   <body>
    {% include top.html %}
+   {% include media_nav.html %}
 
   <div class="jumbotron nuvlabox-main-story">
     <div class="container">
