--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
 
   <title>SixSq. {{ page.title }}</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
   <!-- Bootstrap core CSS -->
   <link href="/externals/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <link href="/externals/bxslider/jquery.bxslider.css" rel="stylesheet" />
