--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -1,4 +1,4 @@
-<div class="jumbotron slipstream-main-story">
+<div class="jumbotron top_product slipstream">
   <div class="container">
     <h1>SlipStream</h1>
     <p>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on open source software.</p>
