--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -18,15 +18,20 @@
   {% include head.html %}
   {% include top.html %}
   {% include nuvlabox_nav.html %}
+  {% include nuvlabox_intro.html %}
 
-        <div class="jumbotron nuvlabox">
+<!--        <div class="jumbotron top_product nuvlabox">
           <div class="container">
             <h1>NuvlaBox</h1>
             <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
-            <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="NuvlaBox overview" width="700" style="padding: 35px 0 15px 0;"/></p>
+          </div>
+        </div> -->
+
+        <div class="main-story nuvlabox">
+          <div class="container">
+            <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="NuvlaBox overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
           </div>
         </div>
-
         <div class="container spacy">
           <h1>In a nutshell</h1>
           <div class="row">
@@ -80,7 +85,7 @@
         </div>
       </div>
 
-      <div style="background-color: #eee">
+      <div class="main-story nuvlabox">
         <div class="container spacy">
           <h1 id="who-is-the-nuvlabox-for">Who is the NuvlaBox for?</h1>
           <div class="row">
