--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -24,12 +24,12 @@
           <div id="banner"><div>Partners Wanted</div></div>
 
             <!-- Main jumbotron for a primary marketing message or call to action -->
-          <div class="jumbotron main-story">
+          <div class="jumbotron">
 
               <div class="container">
                 <h1>Hybrid Cloud Application Deployment</h1>
                 <h2>1-click application deployment automation, based on professional open source.</h2>
-                <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
+                <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
                 <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
               </div>
 
@@ -52,13 +52,12 @@
 
           </div> <!-- /jumbotron -->
 
-          <div id="banner"><div>Partners Wanted</div></div>
-          <div class="jumbotron main-story" style="background-color: #E2EFF7">
+          <div class="jumbotron main-story nuvlabox">
             <div class="container">
               <h1>Bridging the digital divide</h1>
-              <h2>...with a cloud-in-a-box that's child play to use and manage.</h2>
-              <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
-              <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+              <h2>...with an affordable cloud-in-a-box that's child's play to use and manage.</h2>
+              <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
+              <p><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox.html">Learn more &raquo;</a></p>
             </div>
 
             <div class="container">
