--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -14,6 +14,12 @@
         {% if page.author %}
         <div class="date">{{ page.date | date: "%d %B %Y" }} - by {{ page.author }}</div>
         {% endif %}
+        <p/>
+        <a class="twitter-share-button"
+          href="https://twitter.com/share"
+          data-via="sixsq">
+        Tweet
+        </a>
       </div>
     </div>
     
@@ -22,8 +28,17 @@
       <img class="blog-category" src="{{ page.image }}" alt="category" />
       {% endif %}
       {{ page.content | markdownify }}
+      <a class="twitter-share-button"
+        href="https://twitter.com/share"
+        data-via="sixsq">
+      Tweet
+      </a>
     </div>
 
+    <script type="text/javascript">
+    window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+    </script>
+    
     {% include comments.html %}
 
     {% include footer.html %}
